--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.02     2011-10-08
+
+- Require the latest Class::Load (0.11).
+
+
 0.01     2011-08-15
 
 - First release upon an unsuspecting world.
