--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+0.05     2012-10-07
+
+- Require Class::Load 0.20 in the code (not just the distro metadata). This
+  keeps the tests in sync, and this module needed at least 0.11
+  anyway. Reported by Father Chrysostomos. RT #80002.
+
+- Weird classes with either an ISA or VERSION constant (who does that?) would
+  cause the XS to blow up badly. Reported by Father Chrysostomos. RT #79998.
+
+
 0.04     2012-02-08
 
 - Some small test changes for the latest Module::Implementation and
