Import of DROLSKY/Class-Load-XS-0.06 from CPAN.
gitpan-cpan-distribution: Class-Load-XS
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DROLSKY/Class-Load-XS-0.06.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.06     2012-10-08
+
+- Fixed some broken logic that lead to a segfault from the
+  014-weird-constants.t test on some Perls (but unfortunately not the one I
+  test with by default). Reported by Chisel Wright (and several other
+  people). RT #80059.
+
+
 0.05     2012-10-07
 
 - Require Class::Load 0.20 in the code (not just the distro metadata). This
