--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
-0.06     2012-10-08
+0.07     2014-02-13
+    - repository moved to the github moose organization
 
+0.06     2012-10-08
 - Fixed some broken logic that lead to a segfault from the
   014-weird-constants.t test on some Perls (but unfortunately not the one I
   test with by default). Reported by Chisel Wright (and several other
